--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,13 +43,12 @@ body h1{
     margin-right: auto;
 }
 
+#right-buttons{
+    margin: auto;
+}
 #right-buttons button{
     display: flex;
     flex-direction: row;
-    margin-left: auto;
-    margin-right: auto;
-    gap: 10px;
-    
 }
 
 .userxcomputer {
@@ -64,6 +63,13 @@ body h1{
     border: 1px solid black;
     padding: none;
     margin-bottom: 10px;
+    background-color: azure;
+    box-sizing: border-box;
+}
+
+.btn i{
+    font-size: 100px;
+    margin: auto;
 }
 
 #center-text {
