--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body h1{
 #game-container {
     margin: 0 auto;
     background-color: #6EFAFB;
-    width: 80%;
+    width: 60%;
     padding: 2em;
     border-radius: 20px;
 }
@@ -57,18 +57,18 @@ body h1{
 }
 
 .btn {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     margin-bottom: 10px;
-    border: 1px solid black;
     padding: none;
     margin-bottom: 10px;
-    background-color: azure;
+    background-color: rgb(255, 117, 117);
     box-sizing: border-box;
+    border: none;
 }
 
 .btn i{
-    font-size: 100px;
+    font-size: 60px;
     margin: auto;
 }
 
@@ -76,6 +76,14 @@ body h1{
     text-align: center;
     margin: auto;
     font-size: 3em;
+}
+
+#text-container h3, p{
+    margin: 0;
+}
+
+#text-container p{
+    font-size: 0.5em;
 }
 
 #submit-button {
