--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,31 @@ body h1{
     text-align: center;
     margin-top: 1em;
     font-size:40px;
+    margin: 1em 0 0 0;
 }
+
+.buttonDesign{
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 15px;
+    border: 2px solid #fff;
+    background-color: rgb(65, 95, 141);
+    border-radius: 3px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    margin-right: 30px;
+  }
+   
+  .buttonDesign:hover{
+    background-color: rgb(144, 238, 255);
+    border: 2px solid rgb(103, 154, 230);
+    color: rgb(0, 0, 0);
+  }
+
+  #nav-bar ul {
+      text-align: center;
+  }
 
 #game-container {
     margin: 0 auto;
@@ -18,6 +42,7 @@ body h1{
     width: 60%;
     padding: 2em;
     border-radius: 20px;
+    margin-bottom: 10px;
 }
 
 #level-title {
@@ -25,7 +50,6 @@ body h1{
     text-align: center;
     margin: 0;
 }
-
 
 
 #game-elements {
@@ -57,25 +81,26 @@ body h1{
 }
 
 .btn {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     margin-bottom: 10px;
     padding: none;
     margin-bottom: 10px;
     background-color: rgb(255, 117, 117);
     box-sizing: border-box;
     border: none;
+    border-radius: 50%;
 }
 
 .btn i{
-    font-size: 60px;
+    font-size: 40px;
     margin: auto;
 }
 
 #center-text {
     text-align: center;
     margin: auto;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 #text-container h3, p{
@@ -89,7 +114,7 @@ body h1{
 .bottom-button {
     background-color: rgb(111, 214, 111);
     color: white;
-    padding: 30px;
+    padding: 20px;
     border-radius: 10px;
     font-size: 2em;
     text-align: center;
@@ -105,11 +130,11 @@ body h1{
 }
 
 #score-section {
-    margin: 0 auto;
-    position: absolute;
-    display: inline-block;
     font-size: 1.4em;
-    right: 400px;
-    bottom: 150px;
+    text-align: center;
+}
+#score-section h3{
+    margin-top: 20px;
+    margin-bottom: 0;
 }
 
