--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,16 +8,14 @@ body {
 
 body h1{
     text-align: center;
-    margin-top: 1em;
-    font-size:40px;
+    margin-top: 0em;
+    font-size: 30px;
     margin: 1em 0 0 0;
 }
 
 .buttonDesign{
     display: inline-block;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 15px;
+    padding: 10px;
     border: 2px solid #fff;
     background-color: rgb(65, 95, 141);
     border-radius: 3px;
@@ -26,13 +24,13 @@ body h1{
     margin-right: 30px;
   }
    
-  .buttonDesign:hover{
+.buttonDesign:hover{
     background-color: rgb(144, 238, 255);
     border: 2px solid rgb(103, 154, 230);
     color: rgb(0, 0, 0);
   }
 
-  #nav-bar ul {
+#nav-bar ul {
       text-align: center;
   }
 
@@ -40,7 +38,6 @@ body h1{
     margin: 0 auto;
     background-color: #6EFAFB;
     width: 60%;
-    padding: 2em;
     border-radius: 20px;
     margin-bottom: 10px;
 }
@@ -49,6 +46,7 @@ body h1{
     font-size: 2em;
     text-align: center;
     margin: 0;
+    padding-top: 10px;
 }
 
 
@@ -132,6 +130,7 @@ body h1{
 #score-section {
     font-size: 1.4em;
     text-align: center;
+    padding-bottom: 10px;
 }
 #score-section h3{
     margin-top: 20px;
