added a level system where user progresses through levels as they win, added overlays within html which pop up when either the computer or user reaches the score 3 first

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body h1{
     text-align: center;
     margin-top: 0em;
     font-size: 30px;
-    margin: 1em 0 0 0;
+    margin: 1em 0 1em 0;
 }
 
 .buttonDesign{
@@ -137,3 +137,26 @@ body h1{
     margin-bottom: 0;
 }
 
+.overlay {
+    position: absolute;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: blue;
+    color: white;
+    border-radius: 10px;
+    visibility: hidden;
+    text-align: center;
+    width: 100%;
+}
+
+.overlay h1{
+    font-size: 2em;
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+}
+
+.overlay li{
+    padding-bottom: 10px;
+}
