--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,7 +110,7 @@ body h1{
 }
 
 .bottom-button {
-    background-color: rgb(111, 214, 111);
+    background-color: #008a47;
     color: white;
     padding: 20px;
     border-radius: 10px;
