--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -171,6 +171,10 @@ body h1{
     padding-left: 120px;
 }
 
+#instructions {
+    text-align: center;
+}
+
 @media screen and (max-width: 475px) {
     .overlay li{
         margin: 10px;
@@ -196,3 +200,5 @@ body h1{
         width: 90%;
     }
   }
+
+  
